<!--
  ~ Copyright (c) 2018. Ernest Asanov. All rights reserved.
  -->

<resources>
    <string name="app_name">Summon Employee</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_department">Department</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_employees">Employees</string>
    <string name="title_incoming_requests">Incoming</string>
    <string name="title_outgoing_requests">Outgoing</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="error_unknown">Unknown error</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_person">Call Employee</string>
    <string name="logout">Logout</string>
    <string name="prompt_patronymic">Patronymic (optional)</string>
    <string name="prompt_phone">Phone number (optional)</string>
    <string name="prompt_password_confirm">Password (confirm)</string>
    <string name="online">Online</string>
    <string name="employee_photo">Employee\'s photo</string>
    <string name="action_summon">Summon</string>
    <string name="call">Call</string>
    <string name="summon_failed">Summon failed</string>
    <string name="cancel_successful">Request canceled</string>
    <string name="action_accept">Accept</string>
    <string name="action_reject">Reject</string>
    <string name="prompt_post">Post</string>
    <string name="notification_title">Connection</string>
    <string name="notification_message">Connection is active</string>
    <string name="request_accepted">Request accepted</string>
    <string name="request_rejected">Request rejected</string>
    <string name="request_canceled">Request canceled</string>
    <string name="connection_failed">Connection failed</string>
    <string name="error_password_dont_match">Passwords don\'t match</string>
    <string name="reload_failed">Reload failed</string>
    <string name="summon_succeeded">Summon succeeded</string>
    <string name="notifications_channel_description">Notifications for listening requests</string>
    <string name="request_accept_failed">Failed to accept request</string>
    <string name="request_reject_failed">Failed to reject request</string>
    <string name="request_cancel_failed">Failed to cancel request</string>
    <string name="me">Me</string>
    <string name="connection">Connection</string>
    <string name="search_title">Search</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="prompt_server_ip">Server URL</string>
    <string name="server_not_found">Server not found</string>
    <string name="phone_call">Phone</string>
    <string name="action_cancel">Cancel</string>
    <string name="offline">Offline</string>
    <string name="prompt_comment">Comment</string>
    <string name="about">About</string>
    <string name="copy_right" translatable="false">Copyright © %1$d</string>
    <string name="version">Version</string>
    <string name="description">Summon Employee application\nAuthor: Ernest Asanov\nEmail: ern.asanov@yandex.ru</string>
</resources>
