<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/connect"
        android:title="@string/connect"
        android:icon="@drawable/baseline_sync_24"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/disconnect"
        android:title="@string/disconnect"
        android:icon="@drawable/baseline_sync_disabled_24"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/baseline_exit_to_app_24"
        app:showAsAction="always">
    </item>
</menu>