<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data class="CallActivityBinding">
        <variable name="person" type="employee.summon.asano.model.Person"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/person_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/employee_photo"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin" />

        <TextView android:layout_width="wrap_content"
            android:id="@id/fullname"
            android:layout_height="wrap_content"
            android:text='@{person.fullName}'
            android:textStyle="bold"
            android:textSize="@dimen/name_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_photo"/>
        <TextView android:layout_width="wrap_content"
            android:id="@id/email"
            android:layout_height="wrap_content"
            android:text="@{person.email}"
            app:layout_constraintTop_toBottomOf="@id/fullname"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView android:layout_width="wrap_content"
            android:id="@id/phone_view"
            android:layout_height="wrap_content"
            android:text="@{person.phone}"
            app:layout_constraintTop_toBottomOf="@id/fullname"
            app:layout_constraintRight_toRightOf="parent"/>
        <Button
            android:id="@+id/summon_employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_summon"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <Button
            android:id="@+id/call_employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:enabled="@{person.phone != null}"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <Button
            android:id="@+id/cancel_summon_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</layout>