<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data class="SummonActivityBinding">
        <variable name="requestVM" type="employee.summon.asano.viewmodel.SummonRequestVM"/>
        <import type="android.view.View" alias="v"/>
    </data>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@{requestVM.enabled ? (requestVM.accepted ? @android:color/holo_green_light : (requestVM.rejected ? @android:color/holo_red_light : @android:color/white)) : @android:color/darker_gray}">
    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/person_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/employee_photo"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin" />

    <TextView android:layout_width="wrap_content"
        android:id="@id/fullname"
        android:layout_height="wrap_content"
        android:text='@{requestVM.person.fullName}'
        android:textStyle="bold"
        android:textSize="@dimen/name_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_photo"/>
    <TextView android:layout_width="wrap_content"
        android:id="@id/email"
        android:layout_height="wrap_content"
        android:text="@{requestVM.person.email}"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/fullname"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView android:layout_width="wrap_content"
        android:id="@id/phone_view"
        android:layout_height="wrap_content"
        android:text="@{requestVM.person.phone}"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/fullname"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/accept_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/action_accept"
        android:visibility="@{requestVM.canRespond ? v.VISIBLE : v.GONE}"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/reject_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/action_reject"
        android:visibility="@{requestVM.canRespond ? v.VISIBLE : v.GONE}"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/cancel_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        android:visibility="@{requestVM.canDisable ? v.VISIBLE : v.GONE}"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
</android.support.constraint.ConstraintLayout>
</layout>